@@ -1,3 +1,10 @@
+2009-08-21  Ulrich Mueller  <ulm@gentoo.org>
+
+	* gentoo-syntax.el (ebuild-mode-common-licenses): New variable.
+	(ebuild-mode-insert-skeleton): Interactively ask for values.
+	Move function behind mode definitions and completion code.
+	(ebuild-mode-menu): Add ebuild-mode-insert-skeleton to menu.
+
 2009-08-20  Ulrich Mueller  <ulm@gentoo.org>
 
 	* gentoo-syntax.el (ebuild-mode-make-keywords-list): Increase
